# minnie

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
compiler/: Cargo.toml
compiler/src/: main.rs
core/: Cargo.toml
core/src/: ast.rs  compiler.rs  error_reporting.rs  eval.rs  grammar.lalrpop  lexer.rs  lib.rs  module.rs  parser.rs  runtime.rs  span.rs  symbols.rs  types.rs
core/src/parser/: ast.rs  lalrpop_support.rs  lexical_env.rs
doc/: design.md  references.md
examples/: factorial.min  locals.min
repl/: Cargo.toml
repl/src/: eval.rs  main.rs
runtime/: Cargo.toml
runtime/src/: main.rs
src/: ast.rs  compiler.rs  error_reporting.rs  eval.rs  grammar.lalrpop  lexer.rs  main.rs  span.rs
test/: .gitignore  Cargo.toml  README.md
test/tests/: compiler_output.rs  parser_output.rs
test/tests/samples/: function_param_mismatch.min  function_simple.min  main_return.min
test/tests/snapshots/: compiler_output__compiled_function_param_mismatch@function_param_mismatch.min.snap  compiler_output__compiled_function_simple@function_simple.min.snap  compiler_output__compiled_main_empty@main_empty.min.snap  compiler_output__compiled_main_return@main_return.min.snap  parser_output__call_0.snap  parser_output__call_1.snap  parser_output__comparison_eq_precedence.snap  parser_output__comparison_eq_precedence_2.snap  parser_output__comparison_type_mismatch.snap  parser_output__math_precedence.snap  parser_output__math_type_mismatch.snap
