[package]
name = "minnie"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
logos = "0.12"
codespan-reporting = "0.11"
lalrpop-util =  { version = "0.19.6", features = ["lexer"] }
regex = "1"
anyhow = "1.0"
gumdrop = "0.8"
thiserror = "1.0"
wasmtime = "0.32"
rustyline = "9.1"
