[package]
name = "minnie"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
itertools = "0.10"
log = "0.4"
logos = "0.12"
codespan-reporting = "0.11"
lalrpop-util = "0.19.6"
anyhow = "1.0"
thiserror = "1.0"
wasmtime = "0.32"
wasmtime-wasi = "0.32"
serde = { version = "1.0", features=["derive"], optional = true }

[features]
# Enables serialization of AST objects -- used by the test module
serialize_ast = ["serde"]
